# julian

./: .gitignore  Cargo.toml  README.md  visuals.ipynb
.ipynb_checkpoints/: README-checkpoint.md
src/: lib.rs  main.rs  query.rs  utils.rs
