[package]
name = "julian"
version = "0.1.0"
authors = ["jaxon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["full"] }
csv = "1.1.6"
reqwest = "0.11.3"
serde = { version = "1.0.126", features = ["derive"] }